# django-shop-deploy

Auth/myauth/: urls.py  views.py
Auth/mysite/: settings.py  urls.py
CBV/mysite/shopapp/: urls.py  views.py
DRF/: README.md
DRF/mysite/myauth/: views.py
DRF/mysite/mysite/: settings.py  urls.py
DRF/mysite/shopapp/: forms.py  urls.py  views.py
DatabaseAndModels/mysite/shopapp/: models.py
DjangoAdmin/mysite/mysite/: settings.py
DjangoAdmin/mysite/shopapp/: admin.py  apps.py  models.py  urls.py  views.py
DjangoIntro/mysite/mysite/: settings.py  urls.py
DjangoIntro/mysite/shopapp/: urls.py  views.py
Django_Cache/mysite/: .flake8
Django_Cache/mysite/blogapp/: sitemap.py  views.py
Django_Cache/mysite/mysite/: settings.py  urls.py
Django_Cache/mysite/shopapp/: admin.py  common.py  models.py  serializers.py  urls.py  views.py
Files/: README.md
Files/mysite/: requirements.txt
Files/mysite/myauth/: models.py  tests.py  urls.py  views.py
Files/mysite/mysite/: settings.py  urls.py
Files/mysite/shopapp/: admin.py  tests.py  urls.py  views.py
Forms/mysite/shopapp/: forms.py  urls.py  views.py
HTML_CSS/: README.md  index.html  script.js  style.css
RequestsAndMiddlewares/mysite/: settings.py  urls.py
RequestsAndMiddlewares/requestdataapp/: apps.py  middlewares.py  urls.py  views.py
Testing/: README.md
Testing/mysite/myauth/: urls.py  (+1 more)
import_export/: README.md
import_export/mysite/: .flake8
prod/mysite/: Dockerfile  docker-compose.yaml  pyproject.toml
prod/mysite/mysite/: settings.py
queries/: README.md
queries/mysite/: .flake8
(+88 files in other folders)
