[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Sergey"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "4.2"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
djangorestframework = "3.14.0"
Pillow = "*"
gunicorn = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"